[package]
name = "triangulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
rand = "0.8.5"
resvg = "0.31.0"
colored = "2.0.0"
spinners = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.2.4", features = ["derive"] }
anyhow = "1.0.70"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
